# dr-web-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  README.md  ROADMAP.md  ai_test_results2.json  auto-complete.py  debug_results.json  example_complex_actions.json5  fix_jsonl.py  fix_venv_setup.sh  improved_chat.py  pyproject.toml  pytest.ini  q1.json5  q2.json5  q2_basic.json5  q2_simple.json5  requirements.txt  setup.py  simple_fix_jsonl.py  test.json  ylli_results.json
.github/: publish.yml
.github/workflows/: docker-publish.yml  publish.yml  python-app.yml
benchmark/: benchmark.py  execution_results.drweb.json  execution_results.drweb_analysis.json  execution_results.drweb_data.csv  execution_results.drweb_summary.md  execution_results.json
benchmark/oxpath/: Dockerfile
benchmark/queries/: simple.drweb.json  simple.json  simple.json5  simple.oxpath
cli/: __main__.py  cli.py  plugin_cli.py
data/: README.md  training_stats.json  webql_complete_training.jsonl  webql_core_concepts.jsonl  webql_documentation_examples.jsonl  webql_negative_examples.jsonl  webql_plugin_system.jsonl  webql_use_cases.jsonl  webql_vs_others_comparison.jsonl
docs/: AI_MODEL_OPTIONS.md  AI_SELECTOR_CONFIG.md  AI_SELECTOR_DESIGN.md  CONTRIBUTING_PLUGINS.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEVELOPMENT_GUIDE.md  PLUGIN_GETTING_STARTED.md  PLUGIN_REGISTRY.md
docs/webql-manual/: webql-manual.aux  webql-manual.out  webql-manual.tex  webql-manual.toc
engine/: requirements.txt  setup.py
engine/data/: 4chan-data.json  4chan-query.json5  4chan.json  4chan.json5  query.yaml
engine/tests/: conftest.py
engine/web_engine/: actions.py  conditionals.py  engine.py  extract_processor.py  extractor.py  follow_processor.py  javascript_processor.py  models.py  plugin_discovery.py  plugin_interface.py  plugin_manager.py  processors.py
examples/: README.md  google.json5  healthcare_llm_training.json5  healthcare_simple.json5  medical_journals_training.json5  pubmed_health_data.json5  results.json  simple_test.json5  test_llm_format.json5  test_llm_simple.json5  test_output_format.json5
examples/actions/: click_and_navigate.json5  form_interaction.json5  javascript_content.json5
examples/advanced/: conditional_extraction.json5  javascript_execution.json5
examples/basic/: README.md  pagination.json5  simple_extraction.json5
examples/ecommerce/: childcare_services.json5  product_catalog.json5
examples/news/: blog_articles.json5
examples/plugin-template-ai-selector/: LICENSE  README.md  pyproject.toml  setup.py
examples/plugin-template-ai-selector/drweb_plugin_ai_selector/: __init__.py  config.py  plugin.py  processor.py
examples/plugin-template-ai-selector/examples/: basic_usage.json5
examples/plugin-template-ai-selector/tests/: __init__.py  test_plugin.py
examples/plugins/: README.md  ai_selector_examples.json5  ai_selector_simple.json5  ai_selector_test.json5  api_extraction.json5  debug_quotes.json5  google_search_ylli_prifti.json5  jsonld_extraction.json5  output_format_agent.json5  output_format_anthropic.json5  output_format_jsonl.json5  output_format_openai.json5  output_format_token_optimized.json5  simple_ylli_search.json5  smart_retry_api.json5  smart_retry_conditional.json5  smart_retry_example.json5  ylli_prifti_search.json5
examples/social/: reddit_posts.json5
internal-plugins/: README.md
internal-plugins/ai_selector/: __init__.py  plugin.py
internal-plugins/api_extractor/: __init__.py  plugin.py
internal-plugins/jsonld_extractor/: __init__.py  plugin.py
internal-plugins/output_format/: __init__.py  plugin.py
internal-plugins/proxy_rotation/: __init__.py  plugin.py
internal-plugins/smart_retry/: __init__.py  (+1 more)
mlops/: CONFIG_GUIDE.md  DEPLOYMENT_README.md  Makefile  README.md  README_WEBQL.md  interactive_test.py  quick_test.py  setup_cache.sh  test_model.py  verify_setup.py
web_cli/: cli.py  query.json5  requirements.txt  setup.py  sitters.json
(+84 files in other folders)
