[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-web-engine"
version = "0.5.0"
description = "A data retrieval engine based on Playwright."
authors = [{ name = "Ylli Prifti", email = "ylli@prifti.us" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "pydantic",
    "json5",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-playwright",
]

[project.scripts]
dr-web-engine = "cli.cli:main"

[tool.setuptools]
packages = ["cli", "engine"]

[tool.setuptools.package-data]
"cli" = ["*.json", "*.yaml"]
"engine" = ["*.json", "*.yaml"]

[tool.setuptools.exclude-package-data]
"cli" = ["__pycache__"]
"engine" = ["__pycache__"]
