[build-system]
requires = ["setuptools>=42", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-web-engine"
version = "0.10.0"
description = "A data retrieval engine based on Playwright."
authors = [{ name = "Ylli Prifti", email = "ylli@prifti.us" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "playwright",
    "pydantic", 
    "json5",
    "pyyaml",
    "typer[all]",
    "requests",
    "rich",
    "packaging"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-playwright",
    "pytest-mock",
    "tomli"
]

[project.scripts]
dr-web-engine = "cli.cli:app"
drweb = "cli.cli:app"

#[tool.setuptools]
#packages = ["cli", "engine", "engine.web_engine", "engine.web_engine.utils",
#    "engine.web_engine.parsers", "engine.web_engine.base"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "engine*"]

[tool.setuptools.package-data]
"cli" = ["*.json", "*.yaml"]
"engine" = ["*.json", "*.yaml"]

[tool.setuptools.exclude-package-data]
"cli" = ["__pycache__"]
"engine" = ["__pycache__"]
