[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drweb-plugin-ai-selector"
version = "1.0.0"
description = "AI-powered element selector plugin for DR Web Engine"
authors = [{ name = "DR Web Engine Team", email = "support@drwebengine.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "dr-web-engine>=0.10.0",
    "requests>=2.25.0", 
    "pydantic>=2.0.0"
]
keywords = ["web scraping", "ai", "element selection", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/starlitlog/drweb-plugin-ai-selector"
Documentation = "https://drwebengine.com/docs/plugins/ai-selector"
Repository = "https://github.com/starlitlog/drweb-plugin-ai-selector"
"Bug Tracker" = "https://github.com/starlitlog/drweb-plugin-ai-selector/issues"

[project.entry-points."drweb.plugins"]
ai-selector = "drweb_plugin_ai_selector.plugin:AISelectorPlugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["drweb_plugin_ai_selector*"]